make sure transport mode accounted for when looking up routes and/or services during route calc